<resources>
    <string name="app_name">工行展示柜</string>
    <string name="item_product_category">钻石</string>
    <string name="back">返回</string>
    <string name="buy">立即购买</string>
    <string name="item_product_name">商品名称</string>
    <string name="scan_qrcode">扫描二维码</string>

    <string name="item_detail_shortcut">铂金钻戒</string>
    <string name="item_detail_desc">经典钻戒的款式 好看的款式</string>

    <string name="product_detail_name_1">名称</string>
    <string name="product_detail_price_high_1">市场价格</string>
    <string name="product_detail_price_normal_1">销售形状</string>
    <string name="product_detail_original_1">原产地</string>
    <string name="product_detail_introduction_1">介绍</string>

    <string name="product_detail_name">南非之星</string>
    <string name="product_detail_name_en">Star of South Africa</string>
    <string name="product_detail_price_high">8000元</string>
    <string name="product_detail_price_normal">6999元</string>
    <string name="product_detail_price_original">南非</string>
    <string name="product_detail_price_desc">是一颗极优质的净水钻，原钻石重83.5carats。是一颗极优质的净水钻，原钻石重83.5carats。是一颗极优质的净水钻，原钻石重83.5carats。是一颗极优质的净水钻，原钻石重83.5carats。是一颗极优质的净水钻，原钻石重83.5carats。</string>
    <string name="item_product_introduction">商品简介商品简介商品简介商品简介商品简介商品简介商品简介商品简介商品简介商品简介商品简介商品简介商品简介商品简介商品简介商品简介商品简介商品简介商品简介商品简介商品简介商品简介商品简介商品简介商品简介商品简介商品简介商品简介商品简介商品简介商品简介商品简介商品简介商品简介商品简介商品简介商品简介商品简介商品简介商品简介商品简介商品简介商品简介商品简介商品简介商品简介商品简介商品简介商品简介</string>
</resources>
